--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html xmlns:ng="http://angularjs.org" ng-app="kerubApp">
-<head lang="en">
+<head ng-app="kerubApp">
     <meta charset="UTF-8">
     <title>kerub</title>
+    <script src="webjars/angularjs/1.2.16/angular.min.js"></script>
+    <script src="webjars/angular-ui-bootstrap/0.11.0/ui-bootstrap-tpls.min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/MainTabs.js"></script>
     <link href="webjars/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="css/kerub.css" rel="stylesheet"/>
+
 </head>
 <body>
 
-    <nav class="navbar navbar-default" role="navigation">
-
-    </nav>
+    <div ng-controller="MainTabs">
+        <tabset>
+            <tab heading="Virtual machines">
+            </tab>
+            <tab heading="Hosts">
+            </tab>
+            <tab heading="Virtual networks">
+            </tab>
+            <tab heading="Storage">
+            </tab>
+        </tabset>
+    </div>
 
     <div ng-controller="Login">
         <script type="text/ng-template" id="myModalContent.html">
@@ -27,10 +42,6 @@
         </script>
     </div>
 
-    <script src="webjars/angularjs/1.2.16/angular.min.js"></script>
-    <script src="webjars/angular-ui-bootstrap/0.11.0/ui-bootstrap-tpls.min.js"></script>
-    <script src="webjars/angular-ui-bootstrap/0.11.0/ui-bootstrap.min.js"></script>
-    <script src="js/app.js"></script>
 
 </body>
 </html>
