added angular router to the config
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>kerub</title>
     <script src="webjars/angularjs/1.2.21/angular.min.js"></script>
+    <script src="webjars/angularjs/1.2.21/angular-route.min.js"></script>
     <script src="webjars/angular-ui-bootstrap/0.11.0/ui-bootstrap-tpls.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/HostTab.js"></script>
