added logo img, minimal formatting
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -92,7 +92,12 @@
                 <tab-heading>
                     <i class="glyphicon glyphicon-info-sign"></i>About
                 </tab-heading>
-                <span>version: {{versionInfo.version}}</span>
+                <div class="versioninfobox">
+                <img src="img/kerub.png"><br>
+                <span>title: {{versionInfo.title}}</span><br>
+                <span>vendor: {{versionInfo.vendor}}</span><br>
+                <span>version: {{versionInfo.version}}</span><br>
+                </div>
             </tab>
         </tabset>
     </div>
