added angularjs-nvd3-directives dependency
At the same time, angular js and bootstrap updated

Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,9 +3,9 @@
 <head ng-app="kerubApp">
     <meta charset="UTF-8">
     <title>kerub</title>
-    <script src="webjars/angularjs/1.2.21/angular.min.js"></script>
-    <script src="webjars/angularjs/1.2.21/angular-route.min.js"></script>
-    <script src="webjars/angular-ui-bootstrap/0.11.0/ui-bootstrap-tpls.min.js"></script>
+    <script src="webjars/angularjs/1.2.25/angular.min.js"></script>
+    <script src="webjars/angularjs/1.2.25/angular-route.min.js"></script>
+    <script src="webjars/angular-ui-bootstrap/0.11.0-3/ui-bootstrap-tpls.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/socket.js"></script>
     <script src="js/HostTab.js"></script>
