paging implementation on server side
Bug-Url: https://github.com/K0zka/kerub/issues/4
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -85,7 +85,8 @@
                         </tr>
                     </tbody>
                 </table>
-
+                <ul class="pagination">
+                </ul>
             </tab>
             <tab heading="Storage">
             </tab>
