added link to api documentation
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -99,6 +99,7 @@
                 <span>title: {{versionInfo.title}}</span><br>
                 <span>vendor: {{versionInfo.vendor}}</span><br>
                 <span>version: {{versionInfo.version}}</span><br>
+                <span><a href="apidoc/">api documentation</a></span><br>
                 </div>
             </tab>
         </tabset>
