--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,6 +10,7 @@
     <script src="webjars/angular-ui-bootstrap/0.12.0/ui-bootstrap-tpls.min.js"></script>
     <script src="webjars/sockjs-client/0.3.4/sockjs.min.js"></script>
     <script src="webjars/markdown-js/0.5.0/markdown.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/app.js"></script>
     <script src="js/socket.js"></script>
     <script src="js/Session.js"></script>
@@ -92,6 +93,8 @@
                     </tbody>
                 </table>
                 <ul class="pagination">
+                    <li><a href="#">&laquo;</a></li>
+                    <li><a href="#">&raquo;</a></li>
                 </ul>
             </tab>
             <tab heading="Storage">
