--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,13 +3,17 @@
 <head ng-app="kerubApp">
     <meta charset="UTF-8">
     <title>kerub</title>
-    <script src="webjars/angularjs/1.2.26/angular.min.js"></script>
-    <script src="webjars/angularjs/1.2.26/angular-route.min.js"></script>
+    <script src="webjars/angularjs/1.2.28/angular.min.js"></script>
+    <script src="webjars/angularjs/1.2.28/angular-sanitize.min.js"></script>
+    <script src="webjars/angularjs/1.2.28/angular-route.min.js"></script>
     <script src="webjars/angular-uuid4/0.2.1/angular-uuid4.min.js"></script>
-    <script src="webjars/angular-ui-bootstrap/0.11.2/ui-bootstrap-tpls.min.js"></script>
+    <script src="webjars/angular-ui-bootstrap/0.12.0/ui-bootstrap-tpls.min.js"></script>
     <script src="webjars/sockjs-client/0.3.4/sockjs.min.js"></script>
+    <script src="webjars/markdown-js/0.5.0/markdown.js"></script>
     <script src="js/app.js"></script>
     <script src="js/socket.js"></script>
+    <script src="js/Session.js"></script>
+    <script src="js/Login.js"></script>
     <script src="js/HostTab.js"></script>
     <script src="js/VersionInfo.js"></script>
     <script src="js/NewHostWizard.js"></script>
@@ -108,18 +112,36 @@
     </div>
 
     <div ng-controller="Login">
-        <script type="text/ng-template" id="myModalContent.html">
+        <script type="text/ng-template" id="Login.html">
             <div class="modal-header">
                 <h3 class="modal-title">Login</h3>
             </div>
-            <input ng-bind="username" class="form-control" placeholder="username">
-            <input ng-bind="password" class="form-control" type="password" placeholder="password">
+            <div class="modal-body">
+                <div class="media login-screen">
+                    <div class="media-right thumbnail col-sm-3 col-md-3">
+                        <a href="#">
+                            <img src="img/kerub.png" class="media-object" alt="logo"/>
+                        </a>
+                        <div class="caption">
+                            <span class="" ng-bind="version.title"></span>
+                            <span ng-bind="version.version"></span>
+                        </div>
+                    </div>
+                    <div class="media-body">
+                        <span ng-bind-html="motd">
+                        </span>
+                    </div>
+                </div>
+                <form ng-submit="login()">
+                    <input ng-model="username" class="form-control" placeholder="username">
+                    <input ng-model="password" class="form-control" type="password" placeholder="password">
+                </form>
+            </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary glyphicon glyphicon-ok-sign" ng-click="login">
+                <button type="button" class="btn btn-primary glyphicon glyphicon-ok-sign" ng-click="login()">
                     Login
                 </button>
             </div>
-
         </script>
     </div>
 
