--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,7 @@
     <title>kerub</title>
     <script src="webjars/angularjs/1.2.26/angular.min.js"></script>
     <script src="webjars/angularjs/1.2.26/angular-route.min.js"></script>
+    <script src="webjars/angular-uuid4/0.2.1/angular-uuid4.min.js"></script>
     <script src="webjars/angular-ui-bootstrap/0.11.2/ui-bootstrap-tpls.min.js"></script>
     <script src="webjars/sockjs-client/0.3.4/sockjs.min.js"></script>
     <script src="js/app.js"></script>
