--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -76,12 +76,13 @@
                     <i class="glyphicon glyphicon-wrench"></i>Hosts
                 </tab-heading>
                 <button type="button" class="btn btn-default glyphicon glyphicon-plus" ng-click="newHostForm()">New Host</button>
-                <table class="table">
+                <table class="table table-striped table-hover">
                     <thead>
                     <tr>
                         <td>address</td>
                         <td>status</td>
                         <td>dedicated</td>
+                        <td>info</td>
                     </tr>
                     </thead>
                     <tbody>
@@ -89,6 +90,21 @@
                             <td>{{host.address}}</td>
                             <td>N/A</td>
                             <td>{{host.dedicated}}</td>
+                            <td><span ng-if="host.capabilities.distribution" class="label label-primary">
+                                {{host.capabilities.distribution.name}}
+                                {{host.capabilities.distribution.version.major}}
+                                {{host.capabilities.distribution.version.minor}}
+                                </span>
+                                <span ng-if="host.capabilities.system.manufacturer" class="label label-default">
+                                {{host.capabilities.system.manufacturer}}
+                                </span>
+                                <span ng-if="host.capabilities.cpuArchitecture" class="label label-info">
+                                {{host.capabilities.cpuArchitecture}}
+                                </span>
+                                <span ng-if="host.capabilities.cpuArchitecture" class="label label-success">
+                                {{host.capabilities.totalMemory / (1024 * 1024) | number : 2}} GB
+                                </span>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
