some fixes for the packages tab - more compact table - repeat the rows, not the table
Bug-Url: https://github.com/K0zka/kerub/issues/24
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -228,10 +228,10 @@
             </div>
         </form>
         <form ng-show="isVisible('software')">
-            <table class="table" ng-repeat="software in host.capabilities.installedSoftware">
-                <tr>
+            <table class="table table-condensed">
+                <tr ng-repeat="software in host.capabilities.installedSoftware">
                     <td>{{software.name}}</td>
-                    <td>{{software.version.major}} {{software.version.minor}}</td>
+                    <td>{{software.version.major}}<span ng-if="software.version.minor">.{{software.version.minor}}</span><span ng-if="software.version.build">.{{software.version.build}}</span></td>
                 </tr>
             </table>
         </form>
