--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -236,6 +236,35 @@
             </table>
         </form>
         <form ng-show="isVisible('CPU')">
+            <h2>CPU</h2>
+            <div class="form-group">
+                <label>total</label>
+                <input class="form-control" ng-value="nrOfCpus" disabled>
+            </div>
+
+            <span ng-repeat="cpu in host.capabilities.cpus">
+                <h4>CPU</h4>
+                <div class="form-group" ng-if="cpu.manufacturer">
+                    <label>manufacturer</label>
+                    <input class="form-control" ng-model="cpu.manufacturer" disabled>
+                </div>
+                <div class="form-group" ng-if="cpu.version">
+                    <label>version</label>
+                    <input class="form-control" ng-model="cpu.version" disabled>
+                </div>
+                <div class="form-group" ng-if="cpu.coreCount">
+                    <label>cores</label>
+                    <input class="form-control" ng-model="cpu.coreCount" disabled>
+                </div>
+                <div class="form-group" ng-if="cpu.threadCount">
+                    <label>threads</label>
+                    <input class="form-control" ng-model="cpu.threadCount" disabled>
+                </div>
+                <div class="form-group" ng-if="cpu.maxSpeedMhz">
+                    <label>max speed (Mhz)</label>
+                    <input class="form-control" ng-model="cpu.maxSpeedMhz" disabled>
+                </div>
+            </span>
 
         </form>
         <form ng-show="isVisible('RAM')">
