--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -165,10 +165,7 @@
         </script>
     </div>
 
-    <span ng-include="'NewHostWizard.html'">
-
-    </span>
-
+    <span ng-include="'NewHostWizard.html'"/>
     <span ng-include="'HostDetails.html'"/>
 
 </body>
