Revert "removed redundant title"
This reverts commit bd31e9e0649d499a921c0d65a009663c686c4221.

--- a/src/main/webapp/HostDetails.html
+++ b/src/main/webapp/HostDetails.html
@@ -48,6 +48,7 @@
         </table>
     </form>
     <form ng-show="isVisible('CPU')">
+        <h2>CPU</h2>
         <div class="form-group">
             <label>total</label>
             <input class="form-control" ng-value="nrOfCpus" disabled>
