Some enhancement on the login screen  - automatic focus on the username field  - login when enter is pushed on the password field
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -48,8 +48,8 @@
                     </div>
                 </div>
                 <form ng-submit="login()">
-                    <input ng-model="username" class="form-control" placeholder="username">
-                    <input ng-model="password" class="form-control" type="password" placeholder="password">
+                    <input ng-model="username" class="form-control" placeholder="username" autofocus>
+                    <input ng-model="password" class="form-control" type="password" placeholder="password" ng-keypress="onKeyPress($event)">
                 </form>
             </div>
             <div class="modal-footer">
