--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -123,8 +123,18 @@
         <div class="modal-header">
             <h3 class="modal-title">New Host {{host.address}}</h3>
         </div>
-        <input ng-model="host.address" class="form-control" placeholder="address" ng-keypress="clearPublicKey()" ng-blur="updatePubkey()">
-        <input ng-model="host.publicKey" readonly disabled class="form-control" placeholder="fingerprint">
+        <input
+                ng-model="host.address"
+                class="form-control"
+                placeholder="address"
+                ng-keypress="clearPublicKey()"
+                ng-blur="updatePubkey()">
+        <input
+                ng-model="host.publicKey"
+                readonly
+                disabled
+                class="form-control"
+                placeholder="fingerprint">
         <tabset>
             <tab>
                 <tab-heading>Public Key</tab-heading>
@@ -136,7 +146,12 @@
             </tab>
             <tab>
                 <tab-heading>Password</tab-heading>
-                <input ng-model="password" class="form-control" type="password" placeholder="password">
+                <input
+                        ng-model="password"
+                        class="form-control"
+                        type="password"
+                        placeholder="password"
+                        ng-keypress="onKeyPress($event)">
             </tab>
         </tabset>
 
