minor css change for the public key display
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -160,7 +160,7 @@
                 <tab-heading><span class="glyphicon glyphicon-check"></span> Public Key</tab-heading>
                 <div class="panel panel-info">
                     <div class="panel-heading">Add to /root/.ssh/authorized_keys</div>
-                    <div class="panel-body" ng-bind="controllerKey">
+                    <div class="panel-body publickey" ng-bind="controllerKey">
                     </div>
                 </div>
             </tab>
