workaround for password field entry
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -168,7 +168,7 @@
             <tab>
                 <tab-heading><span class="glyphicon glyphicon-asterisk"></span> Password</tab-heading>
                 <input
-                        ng-model="password"
+                        ng-model="password.password"
                         class="form-control"
                         type="password"
                         placeholder="password"
